# comp.

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dashboard.html  dashboard.py  demo_gdpr.py  demo_policy.py  demo_train.py  docker-compose.yml  landing.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: adversarial_prompts.json  run_benchmark.py
dashboard/: __init__.py  backends.py  config.py  deps.py  helpers.py  rbac.py  registry.py  schemas.py  tenancy.py
dashboard/routers/: __init__.py  admin.py  chat.py  models.py  openai_compat.py  policies.py  training.py
dashboard/static/: dashboard.html  landing.html
examples/: demo_gdpr.py  demo_policy.py  demo_train.py
policies/: gdpr.txt  legal_compliance.txt  no_pii.txt
src/: __init__.py  benchmark.py  certificate.py  cli.py  concept_erasure.py  enforcer.py  gate.py  gdpr.py  guard.py  iam.py  nlpn.py  policy.py  report.py  semantic.py  synthesizer.py  tool_gate.py  train.py  translator.py  utils.py
tests/: test_concepts.py  test_e2e.py  test_enforcer.py  test_gdpr.py  test_integration.py  test_nlpn.py  test_policy.py  test_semantic.py  test_train.py  test_translator.py
