[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comp"
version = "0.2.0"
description = "Nested Least-Privilege Networks — layer-level capability suppression for LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "anthropic>=0.25",
]

[project.scripts]
comp = "src.cli:main"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "slowapi>=0.1.9",
]
semantic = [
    "sentence-transformers>=2.7",
]
quantize = [
    "bitsandbytes>=0.41",
    "accelerate>=0.27",
]
dev = [
    "pytest>=8.0",
]
all = [
    "comp[dashboard,semantic,quantize]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]
