[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comp"
version = "0.2.0"
description = "Nested Least-Privilege Networks — layer-level capability suppression for LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "anthropic>=0.25",
]

[project.scripts]
comp = "src.cli:main"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]
semantic = [
    "sentence-transformers>=2.7",
]
quantize = [
    "bitsandbytes>=0.41",
    "accelerate>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]
all = [
    "comp[dashboard,semantic,quantize]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — black handles this
    "B008",  # do not perform function calls in argument defaults (FastAPI patterns)
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dashboard"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
