[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comp"
version = "0.3.0"
description = "Policy-as-code for LLM API calls — pluggable content guards, IAM, and audit logs"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
comp = "src.cli:main"

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
llamaguard = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.27",
]
yaml = [
    "pyyaml>=6.0",
]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "anthropic>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]
all = [
    "comp[openai,yaml,dashboard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — black handles this
    "B008",  # do not perform function calls in argument defaults (FastAPI patterns)
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dashboard"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
